attempt to fix overflow issue on galaxy s5

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,7 +21,7 @@ body {
   background: linear-gradient(
     -180deg,
     var(--secondary-clr) 0%,
-    var(--accent-clr-1) 4%,
+    var(--accent-clr-1) 5%,
     var(--accent-clr-1) 96%,
     var(--secondary-clr) 100%
   );
@@ -29,6 +29,8 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.1rem;
   line-height: 1.4;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 a {
@@ -39,6 +41,10 @@ a {
 
 a:hover {
   opacity: 0.8;
+}
+
+p {
+  margin-bottom: 20px;
 }
 
 /* Header styles */
@@ -114,7 +120,7 @@ section article {
 
 /* Horizontal rule above each section */
 
-section::before {
+section:before {
   content: '';
   background-color: var(--secondary-clr);
   bottom: 20px;
@@ -372,6 +378,21 @@ header h1 span {
 /* Styles for very small screens, mobile phones < 575px */
 
 @media screen and (max-width: 575px) {
+  body {
+    background: rgb(255, 215, 0);
+    background: linear-gradient(
+      -180deg,
+      var(--secondary-clr) 0%,
+      var(--accent-clr-1) 3.5%,
+      var(--accent-clr-1) 96%,
+      var(--secondary-clr) 100%
+    );
+  }
+
+  header {
+    padding: 0px;
+  }
+
   header nav ul li {
     font-size: 1.5rem;
     margin-top: 15px;
